--- a/home.html
+++ b/home.html
@@ -7,11 +7,11 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel='stylesheet' href='https://unpkg.com/boxicons@latest/css/boxicons.min.css'>
-  <link rel="stylesheet" href="/assets/css/home.css">
+  <link rel="stylesheet" href="home.css">
   <!-- Include AOS CSS -->
-  <script src="/assets/js/aos.js"></script>
-  <script src="/assets/js/home.js"></script>
-  <link href="/assets/css/aos.css" rel="stylesheet">
+  <script src="aos.js"></script>
+  <script src="home.js"></script>
+  <link href="aos.css" rel="stylesheet">
 
 
   <!-- Custom CSS (Optional for further styling) -->
@@ -23,7 +23,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="/images/logo-removebg-preview.png" alt="EcoTravel Adventures Logo" style="width: 40px; height: auto; margin-right: 10px;">
+      <img src="logo-removebg-preview.png" alt="EcoTravel Adventures Logo" style="width: 40px; height: auto; margin-right: 10px;">
       EcoTravel Adventures
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,22 +62,13 @@
 
 <div id="sticky-sidebar" data-aos="fade-down">
   
-  <img src="/images/costalCleance.png" width="100%">
+  <img src="costalCleance.png" width="100%">
 
   <p class="sidebar-location">Location: <span id="location-name">Rainforest Retreat</span></p>
   <p class="sidebar-price">Price: <span id="location-price">800K UGX</span></p>
   <a class="book-btn" href="#booking" style="text-decoration: none;">Book Now</a>
 </div>
 
-
-<div id="sticky-sidebar-2" data-aos="fade-up">
-  
-  <img src="/images/costalCleance.png" width="100%">
-
-  <p class="sidebar-location">Location: <span id="location-name">Rainforest Retreat</span></p>
-  <p class="sidebar-price">Price: <span id="location-price">600K UGX</span></p>
-  <a class="book-btn" href="#booking" style="text-decoration: none;">Book Now</a>
-</div>
 
 
 
@@ -91,7 +82,7 @@
     <!-- Package 1 -->
     <div class="col-md-4">
       <div class="card travel-card" data-aos="fade-left">
-        <img loading="lazy" src="/images/rainforest.png" class="card-img-top" alt="Rainforest Retreat" id="img1">
+        <img loading="lazy" src="rainforest.png" class="card-img-top" alt="Rainforest Retreat" id="img1">
         <div class="card-body">
           <h5 class="card-title">Rainforest Retreat</h5>
           <p class="card-text">Immerse yourself in the lush rainforests of Africa. Experience guided eco-tours that educate you on biodiversity while supporting conservation efforts. Stay at eco-lodges committed to sustainability.</p>
@@ -102,7 +93,7 @@
     <!-- Package 2 -->
     <div class="col-md-4">
       <div class="card travel-card" data-aos="zoom-in">
-        <img loading="lazy" src="/images/costalCleance.png" class="card-img-top" alt="Coastal Cleanse" id="img2">
+        <img loading="lazy" src="costalCleance.png" class="card-img-top" alt="Coastal Cleanse" id="img2">
         <div class="card-body">
           <h5 class="card-title">Coastal Cleanse</h5>
           <p class="card-text">Discover stunning coastlines while participating in beach clean-up initiatives that protect marine ecosystems. Engage with local communities through sustainable tourism practices.</p>
@@ -113,7 +104,7 @@
     <!-- Package 3 -->
     <div class="col-md-4">
       <div class="card travel-card" data-aos="zoom-out">
-        <img loading="lazy" src="/images/montain.png" class="card-img-top" alt="Mountain Majesty" id="img3">
+        <img loading="lazy" src="montain.png" class="card-img-top" alt="Mountain Majesty" id="img3">
         <div class="card-body">
           <h5 class="card-title">Mountain Majesty</h5>
           <p class="card-text">Hike through breathtaking mountain trails with stunning vistas. Enjoy eco-friendly accommodations that allow you to connect with nature while promoting sustainable tourism.</p>
@@ -135,7 +126,7 @@
       <!-- Package 1 -->
       <div class="col-md-4 eco-package-item">
         <div class="card eco-travel-card" data-aos="fade-left">
-          <img loading="lazy" src="/images/wildlive.png" class="card-img-top" alt="Wildlife Safari">
+          <img loading="lazy" src="wildlive.png" class="card-img-top" alt="Wildlife Safari">
           <div class="card-body">
             <h5 class="card-title">Wildlife Safari</h5>
             <p class="card-text">Experience the thrill of observing wildlife in their natural habitats. Guided by expert eco-guides, this package focuses on conservation education and community support.</p>
@@ -148,7 +139,7 @@
       <!-- Package 2 -->
       <div class="col-md-4 eco-package-item">
         <div class="card eco-travel-card" data-aos="fade-right">
-          <img loading="lazy" src="/images/culturalexperience.png" class="card-img-top" alt="Cultural Experience">
+          <img loading="lazy" src="culturalexperience.png" class="card-img-top" alt="Cultural Experience">
           <div class="card-body">
             <h5 class="card-title">Cultural Experience</h5>
             <p class="card-text">Engage with local communities through immersive cultural experiences. Participate in workshops and savor authentic cuisine while supporting local artisans.</p>
@@ -161,7 +152,7 @@
       <!-- Package 3 -->
       <div class="col-md-4 eco-package-item">
         <div class="card eco-travel-card" data-aos="fade-up">
-          <img loading="lazy" src="/images/community empowering.png" class="card-img-top" alt="Community Empowerment">
+          <img loading="lazy" src="community empowering.png" class="card-img-top" alt="Community Empowerment">
           <div class="card-body">
             <h5 class="card-title">Community Empowerment</h5>
             <p class="card-text">Support community-led projects while exploring their culture and lifestyle. This package offers a unique chance to make a difference while enjoying your travels.</p>
@@ -281,7 +272,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 <section class="eco-hero" id="booking">
   <div class="eco-hero-content" data-aos="zoom-out">
-    <h1 class="eco-hero-title">THE TRIP OF YOUR DREAM</h1>
+    <h1 class="eco-hero-title" style="font-size: 20px;">THE TRIP OF YOUR DREAM</h1>
     <p class="eco-hero-subtitle">
         Our travel agency is dedicated to offering you unforgettable eco-friendly vacations designed to fit your unique needs and desires. Whether it’s a journey through the breathtaking landscapes of Africa or a cultural immersion in vibrant local communities, you will experience the best of sustainable travel.
     </p>
@@ -289,21 +280,21 @@ document.addEventListener('DOMContentLoaded', function() {
       <div class="gallery-container">
         <!-- Picture 1 -->
         <div class="gallery-item">
-          <img src="/images/traveler1.png" alt="Gallery Image 1">
+          <img src="traveler1.png" alt="Gallery Image 1">
           <div class="gallery-info">
             <p class="gallery-date">Oct 5, 2024</p>
           </div>
         </div>
         <!-- Picture 2 -->
         <div class="gallery-item">
-          <img src="/images/traveler2.png" alt="Gallery Image 2">
+          <img src="traveler2.png" alt="Gallery Image 2">
           <div class="gallery-info">
             <p class="gallery-date">Oct 7, 2024</p>
           </div>
         </div>
         <!-- Picture 3 -->
         <div class="gallery-item">
-          <img src="/images/traveler3.png" alt="Gallery Image 3">
+          <img src="traveler3.png" alt="Gallery Image 3">
           <div class="gallery-info">
             <p class="gallery-date">Oct 9, 2024</p>
           </div>
@@ -311,13 +302,9 @@ document.addEventListener('DOMContentLoaded', function() {
       </div>
     </section>
     
-    <p class="dream-description">
+    <p class="dream-description" style="font-size: medium;">
         Our agency is committed to creating unforgettable vacation experiences that respect the environment and local cultures. From sailing through crystal-clear waters to exploring hidden gems in cultural cities, we have you covered.
     </p>
-    <p class="dream-description">
-        With seamless travel arrangements, exclusive deals, and on-the-ground support, we craft every detail to provide you with the <strong>trip of your dreams</strong>. Trust us to make your journey memorable and meaningful!
-    </p>
-    <a href="#" class="btn btn-eco-learn-more">LEARN MORE</a>
   </div>
   <div class="eco-search-form" data-aos="fade-right">
     <h2>FIND YOUR TOUR</h2>
@@ -367,17 +354,17 @@ document.addEventListener('DOMContentLoaded', function() {
   <h2 id="sustainability-heading" class="text-center mb-4">Our Commitment to Sustainability</h2>
   <div id="sustainability-row" class="row text-left">
       <div id="carbon-offset" class="col-md-4">
-          <img loading="lazy" src="/images/joseph-prospere-vvLaSduoe94-unsplash.jpg" alt="Carbon Offset" class="mb-3">
+          <img loading="lazy" src="joseph-prospere-vvLaSduoe94-unsplash.jpg" alt="Carbon Offset" class="mb-3">
           <h5 id="carbon-offset-heading">Carbon Offset</h5>
           <p id="carbon-offset-description" data-aos="zoom-out">At EcoTravel Adventures, we actively offset the carbon emissions from your travels. Our partnerships with certified offset programs ensure that your adventures contribute to reforestation and renewable energy initiatives, helping to preserve our planet for future generations.</p>
       </div>
       <div id="eco-lodging" class="col-md-4">
-          <img loading="lazy" src="/images/Mentawai Islands Regency, West Sumatra, Indonesia.png" alt="Eco Lodging" class="mb-3">
+          <img loading="lazy" src="Mentawai Islands Regency, West Sumatra, Indonesia.png" alt="Eco Lodging" class="mb-3">
           <h5 id="eco-lodging-heading">Eco Lodging</h5>
           <p id="eco-lodging-description" data-aos="zoom-in">Enjoy your stay in eco-friendly lodgings that prioritize sustainability. Our accommodations use renewable energy, minimize waste, and engage in practices that protect the local environment, ensuring a comfortable and responsible travel experience.</p>
       </div>
       <div id="local-communities" class="col-md-4">
-          <img loading="lazy" src="/images/lochlainn-riordan-JOfW3MPjVp4-unsplash.jpg" alt="Local Communities" class="mb-3">
+          <img loading="lazy" src="lochlainn-riordan-JOfW3MPjVp4-unsplash.jpg" alt="Local Communities" class="mb-3">
           <h5 id="local-communities-heading">Supporting Local Communities</h5>
           <p id="local-communities-description" data-aos="zoom-out">We prioritize giving back to the communities and cultures you visit. Through sustainable tourism practices, we empower local economies, promote cultural exchange, and ensure that your travel has a positive impact on the people and places you experience.</p>
       </div>
@@ -414,7 +401,7 @@ document.addEventListener('DOMContentLoaded', function() {
   <div class="map-container">
     <!-- Map Image (Clickable countries could be SVGs or Image Map) -->
     <div id="image-eco">
-      <img loading="lazy" src="/images/nature.webp" alt="Africa Map" class="africa-map" usemap="#africa-map" width="50%">
+      <img loading="lazy" src="nature.webp" alt="Africa Map" class="africa-map" usemap="#africa-map" width="50%">
     </div>
     <section class="container mt-3" id="travel-checklist" data-aos="fade-up">
       <h2 class="text-center mb-2">Explore Eco-Friendly Destinations in Africa</h2>
@@ -467,7 +454,7 @@ document.addEventListener('DOMContentLoaded', function() {
       </p>
     
       <div id="carbon-offset" class="col-md-4" style="width: 100%;">
-        <img loading="lazy" src="/images/joseph-prospere-vvLaSduoe94-unsplash.jpg" alt="Carbon Offset" class="mb-3">
+        <img loading="lazy" src="joseph-prospere-vvLaSduoe94-unsplash.jpg" alt="Carbon Offset" class="mb-3">
         <h5 id="carbon-offset-heading">Carbon Offset</h5>
         <p id="carbon-offset-description">We actively offset carbon emissions from your travel, ensuring that your eco-adventure remains sustainable and environmentally responsible.</p>
       </div>
@@ -560,7 +547,7 @@ document.addEventListener('DOMContentLoaded', function() {
         </div>
         <div class="mission-statement mt-4" id="mission-footer">
             <h4>Our Mission</h4>
-            <p class="text-center">
+            <p class="text-left">
                 At EcoTravel Adventures, we believe in <strong>Authentic Connections</strong> that provide opportunities to engage with local communities. Our team offers <strong>Expert Guidance</strong> to ensure a seamless travel experience that respects the environment and enriches your journey.
             </p>
         </div>
