--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EcoTravel Adventures</title>
+  <!-- Favicon Link -->
+  <link rel="icon" href="images/logo-removebg-preview.png" type="image/png">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel='stylesheet' href='https://unpkg.com/boxicons@latest/css/boxicons.min.css'>
