--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container">
     <a class="navbar-brand" href="#">
       <img src="logo-removebg-preview.png" alt="EcoTravel Adventures Logo" style="width: 40px; height: auto; margin-right: 10px;">
-      EcoTravel Adventures
+      EcoTravel AD
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -66,8 +66,8 @@
   
   <img src="costalCleance.png" width="100%">
 
-  <p class="sidebar-location">Location: <span id="location-name">Rainforest Retreat</span></p>
-  <p class="sidebar-price">Price: <span id="location-price">800K UGX</span></p>
+  <p class="sidebar-location">Locat: <span id="location-name">Rainforest Retreat</span></p>
+  <p class="sidebar-price">Price: <span id="location-price">800K</span></p>
   <a class="book-btn" href="#booking" style="text-decoration: none;">Book Now</a>
 </div>
 
