update the form

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ document.addEventListener('DOMContentLoaded', function() {
     </p>
   </div>
   <div class="eco-search-form" data-aos="fade-right">
-    <h2>FIND YOUR TOUR</h2>
+    <h2 style="font-size: 18px;">FIND YOUR TOUR</h2>
     <form>
       <label for="eco-from">From</label>
       <select id="eco-from">
@@ -329,10 +329,6 @@ document.addEventListener('DOMContentLoaded', function() {
       </select>
       <label for="eco-depart-date">Depart Date</label>
       <input type="date" id="eco-depart-date">
-      <label for="eco-duration">Duration</label>
-      <select id="eco-duration">
-        <option value="any-length">Any length</option>
-      </select>
       <label for="eco-adults">Adults</label>
       <input type="number" id="eco-adults" value="2" min="1">
       <label for="eco-children">Children</label>
