--- a/index.html
+++ b/index.html
@@ -539,9 +539,9 @@ document.addEventListener('DOMContentLoaded', function() {
 
         <div class="contact-info mt-4">
             <h4>Contact Us</h4>
-            <p><i class='bx bx-phone'></i> +1 (234) 567-8901</p>
+            <p><i class='bx bx-phone'></i> +1 234 567 5674 </p>
             <p><i class='bx bx-envelope'></i> info@ecotraveladventures.com</p>
-            <p><i class='bx bx-map'></i> 123 Eco St, Green City, USA</p>
+            <p><i class='bx bx-map'></i> 123 accacia , Kampala </p>
         </div>
         <div class="mission-statement mt-4" id="mission-footer">
             <h4>Our Mission</h4>
